# moun

./: .gitignore  CMakeLists.txt  detector.py  generate.cpp  generate.py  setup.py  test.ipynb  test.py
deprecate/: muon_Gen.py  muon_angle_cdf.csv
trying/: generate.ipynb
